2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/efi/init.c (grub_efi_init): Disable watchdog.
	Tested by: Seth Goldberg.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot.c (grub_multiboot_boot) [GRUB_USE_MULTIBOOT2]:
	Properly align mbi.
	Reported by: Seth Goldberg.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Avoid module duplication.

2010-07-01  Sean Finney  <seanius@seanius.net>

	* util/grub.d/10_linux.in: Don't use UUID for LVM root.

2010-07-01  Sean Finney  <seanius@seanius.net>

	* disk/lvm.c (grub_lvm_scan_device): Skip snapshots.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/lvm.c (grub_lvm_checkvalue): New function.
	(grub_lvm_check_flag): Likewise.

2010-07-01  Robert Millan  <rmh@gnu.org>

	* kern/emu/hostdisk.c (convert_system_partition_to_system_disk):
	Support 'p' as partition separator on kernel of FreeBSD (used
	with GPT labels).
	(grub_util_biosdisk_get_grub_dev): Likewise.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Yeeloong firmware port.

	* boot/mips/yeeloong/fwstart.S: New file.
	* bus/cs5536.c (gpiodump): New const.
	(set_io_space): New function.
	(set_iod): Likewise.
	(set_p2d): Likewise.
	(grub_cs5536_init_geode): Likewise.
	* commands/mips/yeeloong/lsspd.c: New file.
	* conf/mips-qemu-mips.rmk (pkglib_MODULES): Add serial.mod.
	(serial_mod_SOURCES): New variable.
	(serial_mod_CFLAGS): Likewise.
	(serial_mod_LDFLAGS): Likewise.
	* conf/mips-yeeloong.rmk (kernel_img_SOURCES): Add term/serial.c,
	term/terminfo.c and term/tparm.c.
	(pkglib_IMAGES): Add fwstart.img.
	(fwstart_img_SOURCES): New variable.
	(fwstart_img_CFLAGS): Likewise.
	(fwstart_img_ASFLAGS): Likewise.
	(fwstart_img_LDFLAGS): Likewise.
	(fwstart_img_FORMAT): Likewise.
	(pkglib_MODULES): Add lsspd.mod.
	(lsspd_mod_SOURCES): New variable.
	(lsspd_mod_CFLAGS): Likewise.
	(lsspd_mod_LDFLAGS): Likewise.
	(pkglib_MODULES): Add halt.mod.
	(halt_mod_SOURCES): New variable.